--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -47,36 +49,90 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 col-lg-8 catalogo">
-                    <h1>Catalogo libri</h1>
-                    </button>
-                    
+                    <h1 class="mt-3">Catalogo libri <button type="button" class="btn btn-primary float-end">
+                        Aggiungi libro
+                    </button></h1>
                     <table class="table table-striped">
                         <thead>
                             <tr>
-                                <th scope="col">#</th>
-                                <th scope="col">First</th>
-                                <th scope="col">Last</th>
-                                <th scope="col">Handle</th>
+                                <th scope="col">Titolo</th>
+                                <th scope="col">Data prestito</th>
+                                <th scope="col">Stato</th>
+                                <th scope="col">Azioni</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody class="align-middle">
                             <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
+                                <td scope="row">I pilastri della terra</td>
+                                <td>-</td>
+                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
+                                <td scope="row">I promessi sposi</td>
+                                <td>-</td>
+                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
+                                <td scope="row">Il signore degli anelli</td>
+                                <td>18/10/2023</td>
+                                <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                                                        <tr>
+                                <td scope="row">I pilastri della terra</td>
+                                <td>-</td>
+                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                            <tr>
+                                <td scope="row">I promessi sposi</td>
+                                <td>-</td>
+                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Il signore degli anelli</td>
+                                <td>18/10/2023</td>
+                                <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                                                        <tr>
+                                <td scope="row">I pilastri della terra</td>
+                                <td>-</td>
+                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                            <tr>
+                                <td scope="row">I promessi sposi</td>
+                                <td>-</td>
+                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Il signore degli anelli</td>
+                                <td>18/10/2023</td>
+                                <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                                                        <tr>
+                                <td scope="row">I pilastri della terra</td>
+                                <td>-</td>
+                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                            <tr>
+                                <td scope="row">I promessi sposi</td>
+                                <td>-</td>
+                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                            </tr>
+                            <tr>
+                                <td scope="row">Il signore degli anelli</td>
+                                <td>18/10/2023</td>
+                                <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                         </tbody>
                     </table>
