--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-    
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 </head>
 
@@ -36,7 +36,7 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Storico Prestiti</a>
                         </li>
-                                                <li class="nav-item">
+                        <li class="nav-item">
                             <a class="nav-link" href="#">Help </a>
                         </li>
                     </ul>
@@ -50,8 +50,8 @@
             <div class="row">
                 <div class="col-sm-12 col-lg-8 catalogo">
                     <h1 class="mt-3">Catalogo libri <button type="button" class="btn btn-primary float-end">
-                        Aggiungi libro
-                    </button></h1>
+                            Aggiungi libro
+                        </button></h1>
                     <table class="table table-striped">
                         <thead>
                             <tr>
@@ -66,73 +66,97 @@
                                 <td scope="row">I pilastri della terra</td>
                                 <td>-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
                                 <td scope="row">I promessi sposi</td>
                                 <td>-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
                                 <td>18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
-                                                        <tr>
+                            <tr>
                                 <td scope="row">I pilastri della terra</td>
                                 <td>-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
                                 <td scope="row">I promessi sposi</td>
                                 <td>-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
                                 <td>18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
-                                                        <tr>
+                            <tr>
                                 <td scope="row">I pilastri della terra</td>
                                 <td>-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
                                 <td scope="row">I promessi sposi</td>
                                 <td>-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
                                 <td>18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
-                                                        <tr>
+                            <tr>
                                 <td scope="row">I pilastri della terra</td>
                                 <td>-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
                                 <td scope="row">I promessi sposi</td>
                                 <td>-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
                                 <td>18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i class="bi bi-pencil-fill"></i></button><button type="button" class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
+                                <td><button type="button" class="btn btn-outline-secondary"><i
+                                            class="bi bi-pencil-fill"></i></button><button type="button"
+                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                         </tbody>
                     </table>
@@ -141,16 +165,39 @@
 
                 <div class="col-sm-12 col-lg-4">
                     <div class="card">
-                        <img class="card-img-top" src="holder.js/100x180/?text=Image cap" alt="Card image cap" />
-                        <div class="card-body">
-                            <h4 class="card-title">Title</h4>
-                            <p class="card-text">Text</p>
+                        <div class="card-header">
+                            Todo
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Item 1</li>
-                            <li class="list-group-item">Item 2</li>
-                            <li class="list-group-item">Item 3</li>
-                        </ul>
+                        <div class="card-body">
+                            <ul class="list-group list-group-flush border rounded">
+                                <li class="list-group-item">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="CallSecretariat">
+                                        <label class="form-check-label" for="CallSecretariat">
+                                            Chiamare segreteria
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="SendWarning">
+                                        <label class="form-check-label" for="SendWarning">
+                                            Mandare avvisi prestiti scaduti
+                                        </label>
+                                    </div>
+                                </li>
+                                <li class="list-group-item">
+
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="OrderNewBooks">
+                                        <label class="form-check-label" for="OrderNewBooks">
+                                            Ordinare nuovi libri
+                                        </label>
+                                    </div>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                     <div class="card">
                         <img class="card-img-top" src="holder.js/100x180/?text=Image cap" alt="Card image cap" />
