--- a/index.html
+++ b/index.html
@@ -199,17 +199,74 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="card">
-                        <img class="card-img-top" src="holder.js/100x180/?text=Image cap" alt="Card image cap" />
-                        <div class="card-body">
-                            <h4 class="card-title">Title</h4>
-                            <p class="card-text">Text</p>
+                    <div class="card mt-4">
+                        <div class="card-header">
+                            F.A.Q.
                         </div>
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Item 1</li>
-                            <li class="list-group-item">Item 2</li>
-                            <li class="list-group-item">Item 3</li>
-                        </ul>
+
+                        <div class="accordion" id="accordionExample">
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+                                        Come aggiungere un nuovo libro?
+                                    </button>
+                                </h2>
+                                <div id="collapseOne" class="accordion-collapse collapse show"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>This is the first item’s accordion body.</strong> It is shown by
+                                        default, until the collapse plugin adds the appropriate classes that we use
+                                        to style each element. These classes control the overall appearance, as well
+                                        as the showing and hiding via CSS transitions. You can modify any of this
+                                        with custom CSS or overriding our default variables. It’s also worth noting
+                                        that just about any HTML can go within the <code>.accordion-body</code>,
+                                        though the transition does limit overflow.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                        Come posso accedere all'anagrafica utenti?
+                                    </button>
+                                </h2>
+                                <div id="collapseTwo" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>This is the second item’s accordion body.</strong> It is hidden by
+                                        default, until the collapse plugin adds the appropriate classes that we use
+                                        to style each element. These classes control the overall appearance, as well
+                                        as the showing and hiding via CSS transitions. You can modify any of this
+                                        with custom CSS or overriding our default variables. It’s also worth noting
+                                        that just about any HTML can go within the <code>.accordion-body</code>,
+                                        though the transition does limit overflow.
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#collapseThree" aria-expanded="false"
+                                        aria-controls="collapseThree">
+                                        Posso usare questa dashboard da mobile?
+                                    </button>
+                                </h2>
+                                <div id="collapseThree" class="accordion-collapse collapse"
+                                    data-bs-parent="#accordionExample">
+                                    <div class="accordion-body">
+                                        <strong>This is the third item’s accordion body.</strong> It is hidden by
+                                        default, until the collapse plugin adds the appropriate classes that we use
+                                        to style each element. These classes control the overall appearance, as well
+                                        as the showing and hiding via CSS transitions. You can modify any of this
+                                        with custom CSS or overriding our default variables. It’s also worth noting
+                                        that just about any HTML can go within the <code>.accordion-body</code>,
+                                        though the transition does limit overflow.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
