Accordione complete, hide column on mobile layout

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <thead>
                             <tr>
                                 <th scope="col">Titolo</th>
-                                <th scope="col">Data prestito</th>
+                                <th scope="col" class="d-none d-md-block">Data prestito</th>
                                 <th scope="col">Stato</th>
                                 <th scope="col">Azioni</th>
                             </tr>
@@ -64,7 +64,7 @@
                         <tbody class="align-middle">
                             <tr>
                                 <td scope="row">I pilastri della terra</td>
-                                <td>-</td>
+                                <td class="d-none d-md-block">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -72,7 +72,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">I promessi sposi</td>
-                                <td>-</td>
+                                <td class="d-none d-md-block">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -80,7 +80,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
-                                <td>18/10/2023</td>
+                                <td class="d-none d-md-block">18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -88,7 +88,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">I pilastri della terra</td>
-                                <td>-</td>
+                                <td class="d-none d-md-block">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -96,7 +96,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">I promessi sposi</td>
-                                <td>-</td>
+                                <td class="d-none d-md-block">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -104,7 +104,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
-                                <td>18/10/2023</td>
+                                <td class="d-none d-md-block">18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -112,7 +112,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">I pilastri della terra</td>
-                                <td>-</td>
+                                <td class="d-none d-md-block">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -120,7 +120,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">I promessi sposi</td>
-                                <td>-</td>
+                                <td class="d-none d-md-block">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -128,7 +128,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
-                                <td>18/10/2023</td>
+                                <td class="d-none d-md-block">18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -136,7 +136,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">I pilastri della terra</td>
-                                <td>-</td>
+                                <td class="d-none d-md-block">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -144,7 +144,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">I promessi sposi</td>
-                                <td>-</td>
+                                <td class="d-none d-md-block">-</td>
                                 <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -152,7 +152,7 @@
                             </tr>
                             <tr>
                                 <td scope="row">Il signore degli anelli</td>
-                                <td>18/10/2023</td>
+                                <td class="d-none d-md-block">18/10/2023</td>
                                 <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
@@ -203,7 +203,7 @@
                         <div class="card-header">
                             F.A.Q.
                         </div>
-
+                        <div class="card-body">
                         <div class="accordion" id="accordionExample">
                             <div class="accordion-item">
                                 <h2 class="accordion-header">
@@ -212,7 +212,7 @@
                                         Come aggiungere un nuovo libro?
                                     </button>
                                 </h2>
-                                <div id="collapseOne" class="accordion-collapse collapse show"
+                                <div id="collapseOne" class="accordion-collapse collapse"
                                     data-bs-parent="#accordionExample">
                                     <div class="accordion-body">
                                         <strong>This is the first item’s accordion body.</strong> It is shown by
@@ -266,6 +266,7 @@
                                     </div>
                                 </div>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
