--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                             <tr>
                                 <td>I pilastri della terra</td>
                                 <td class="d-none d-md-table-cell">-</td>
-                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-success text-light p-1 rounded">Disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
@@ -82,87 +82,79 @@
                             <tr>
                                 <td>I promessi sposi</td>
                                 <td class="d-none d-md-table-cell">-</td>
-                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-success text-light p-1 rounded">Disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>Il signore degli anelli</td>
+                                <td>Harry Potter e la pietra filosofale</td>
                                 <td class="d-none d-md-table-cell">18/10/2023</td>
-                                <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-warning text-light p-1 rounded">In prestito</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>I pilastri della terra</td>
+                                <td>Il codice da vinci</td>
                                 <td class="d-none d-md-table-cell">-</td>
-                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-danger text-light p-1 rounded">Non disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>I promessi sposi</td>
+                                <td>Shining</td>
                                 <td class="d-none d-md-table-cell">-</td>
-                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-success text-light p-1 rounded">Disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>Il signore degli anelli</td>
-                                <td class="d-none d-md-table-cell">18/10/2023</td>
-                                <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
+                                <td>La divina commedia</td>
+                                <td class="d-none d-md-table-cell">21/09/2023</td>
+                                <td><span class="bg-warning text-light p-1 rounded">In prestito</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>I pilastri della terra</td>
+                                <td>Il trono di spade</td>
                                 <td class="d-none d-md-table-cell">-</td>
-                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-success text-light p-1 rounded">Disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>I promessi sposi</td>
+                                <td>Il mondo di Sofia</td>
                                 <td class="d-none d-md-table-cell">-</td>
-                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-danger text-light p-1 rounded">Non disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>Il signore degli anelli</td>
-                                <td class="d-none d-md-table-cell">18/10/2023</td>
-                                <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
+                                <td>Le cronache di Narnia: il leone, la strega e l'armadio</td>
+                                <td class="d-none d-md-table-cell">25/07/2023</td>
+                                <td><span class="bg-warning text-light p-1 rounded">In prestito</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>I pilastri della terra</td>
+                                <td>Il piccolo principe</td>
                                 <td class="d-none d-md-table-cell">-</td>
-                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-success text-light p-1 rounded">Disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
                             </tr>
                             <tr>
-                                <td>I promessi sposi</td>
+                                <td>La storia infinita</td>
                                 <td class="d-none d-md-table-cell">-</td>
-                                <td><span class="bg-success text-light p-1 rounded">disponibile</span></td>
-                                <td><button type="button" class="btn btn-outline-secondary"><i
-                                            class="bi bi-pencil-fill"></i></button><button type="button"
-                                        class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
-                            </tr>
-                            <tr>
-                                <td>Il signore degli anelli</td>
-                                <td class="d-none d-md-table-cell">18/10/2023</td>
-                                <td><span class="bg-warning text-light p-1 rounded">disponibile</span></td>
+                                <td><span class="bg-success text-light p-1 rounded">Disponibile</span></td>
                                 <td><button type="button" class="btn btn-outline-secondary"><i
                                             class="bi bi-pencil-fill"></i></button><button type="button"
                                         class="btn btn-outline-secondary"><i class="bi bi-trash-fill"></i></button></td>
