remove unused content and small fix

--- a/new_book.html
+++ b/new_book.html
@@ -60,32 +60,26 @@
             <h1 class="mt-4">Nuovo libro</h1>
             <form class="row g-3 mt-3">
                 <div class="col-6">
-                    <label for="validationCustom01" class="form-label">Nome Autore</label>
-                    <input type="text" class="form-control" id="validationCustom01"
+                    <label for="Nome" class="form-label">Nome Autore</label>
+                    <input type="text" class="form-control" id="Nome"
                         placeholder="Inserisci il nome dell'autore" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
+
                 </div>
                 <div class="col-6">
-                    <label for="validationCustom01" class="form-label">Cognome Autore</label>
-                    <input type="text" class="form-control" id="validationCustom01"
+                    <label for="Cognome" class="form-label">Cognome Autore</label>
+                    <input type="text" class="form-control" id="Cognome"
                         placeholder="Inserisci il cognome dell'autore" required>
-                    <div class="valid-feedback">
-                        Looks good!
-                    </div>
+  
                 </div>
                 <div class="col-12">
-                    <label for="validationCustom03" class="form-label">Titolo</label>
-                    <input type="text" class="form-control" id="validationCustom03"
+                    <label for="Titolo" class="form-label">Titolo</label>
+                    <input type="text" class="form-control" id="Titolo"
                         placeholder="Inserisci il titolo del libro" required>
-                    <div class="valid-feedback">
-                        Titolo ok
-                    </div>
+
                     <p class="text-muted">Titolo versione italiana</p>
                 </div>
                 <div class="col-md-4">
-                    <label for="validationCustom04" class="form-label">Genere</label>
+                    <label for="Genere" class="form-label">Genere</label>
                     <select class="form-select" aria-label="Genere">
                         <option selected>Genre select</option>
                         <option value="1">Fantasy</option>
@@ -94,20 +88,15 @@
                     </select>
                 </div>
                 <div class="col-md-4">
-                    <label for="validationCustom05" class="form-label">Anno di pubblicazione</label>
-                    <input type="text" class="form-control" id="validationCustom05" placeholder="Inserisci l'anno"
+                    <label for="Anno" class="form-label">Anno di pubblicazione</label>
+                    <input type="text" class="form-control" id="Anno" placeholder="Inserisci l'anno"
                         required>
-                    <div class="valid-feedback">
-                        Anno ok!
-                    </div>
                 </div>
                 <div class="col-md-4">
-                    <label for="validationCustom06" class="form-label">ISBN &cross;</label>
-                    <input type="text" class="form-control" id="validationCustom06"
+                    <label for="ISBN" class="form-label">ISBN &cross;</label>
+                    <input type="text" class="form-control" id="ISBN"
                         placeholder="Inserisci il codice ISBN" required>
-                    <div class="valid-feedback">
-                        ISBN ok!
-                    </div>
+
                 </div>
                 <hr>
                 <div class="col-12">
